# receptor-germline-tools

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
docs/: annotate_rearrangements.rst  conf.py  create_fasta.rst  introduction.rst  working_with_labels.rst
docs/_build/doctrees/: add_germline_annotations.doctree  annotate_rearrangements.doctree  convert_fasta_labels.doctree  create_fasta.doctree  environment.pickle  index.doctree  introduction.doctree  list_of_fields.doctree  working_with_labels.doctree
docs/_build/html/: .buildinfo  add_germline_annotations.html  annotate_rearrangements.html  convert_fasta_labels.html  create_fasta.html  genindex.html  index.html  introduction.html  list_of_fields.html  objects.inv  search.html  searchindex.js  working_with_labels.html
docs/_build/html/_sources/: add_germline_annotations.rst.txt  convert_fasta_labels.rst.txt  index.rst.txt  list_of_fields.rst.txt  working_with_labels.rst.txt
src/receptor_germline_tools/: add_germline_annotations.py  annotate_rearrangements.py  convert_fasta_labels.py  create_fasta.py  germline_utils.py
tests/: Human_IGH_VDJ_rev_3_ex.fasta  Human_IGH_VDJ_rev_3_ex.json  Mouse_129S1_SvlmJ IGLV_rev_2.fasta  Mouse_129S1_SvlmJ IGLV_rev_2.json  dummified_fasta.fasta  fasta_germline_set.json  germline_set.json  labelled_fasta.fasta  rearrangement.tsv  rearrangement_output.tsv  rearrangement_undummified.tsv  rearrangements.tsv  rearrangements_out.tsv  run_tests.cmd  undummified_fasta.fasta
