[metadata]
name = receptor_germline_tools
version = 0.0.1
author = William Lees
author_email = william@lees.org.uk
description = Tools for working with AIRR standard IG/TR receptor germline gene sets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/airr-community/receptor-germline-tools
project_urls =
    Bug Tracker = https://github.com/airr-community/receptor-germline-tools/issues
classifiers =
    Programming Language :: Python :: 3
	License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    add_germline_annotations = receptor_germline_tools.add_germline_annotations:main
